Create Channel API
